--- a/app/www/css/intro.css
+++ b/app/www/css/intro.css
@@ -320,8 +320,10 @@ msg-row {
 /* For Introduction.html */
 
 .intro-avatar {
-    width: 200px;
-    margin-left: 45px;
+    max-width: 55%;
+    height: auto;
+    width: auto\9;
+
 
 }
 
